tdf#165424 writerfilter: handle row's tblPrEx tblCellMar

Up till now, we have handled table margins
specified at the table level
and overridden at the cell level.
But we have ignored any definition of the cell margins
at the row level.

This patch adds support for tblCellMar under w:tr's tblPrEx,

make CppunitTest_sw_layoutwriter4 \
       CPPUNIT_TEST_NAME=TestTdf164907_rowHeightAtLeast

This also can be seen (slightly) in ooxmlexport14's tdf92472.docx
and in rows 4+ of ooxmlexport20's tdf138612.docx.

The patch ended up being simple, thanks to Laszlo's earlier work.
(I fixed a tiny bug for him - otherwise it was missing
the first cell/column - which I have captured in this unit test):

make CppunitTest_sw_ooxmlexport20 CPPUNIT_TEST_NAME=testTdf138612

Change-Id: Ic98d6cb1b41096c6fd137948babc74dba7e79ccd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183753
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183822
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>